@startuml

    class Patient <<FHIR>>
    class ImagingStudy <<FHIR>>
    class Context
    note left: FHIR resources in context
    class FhirChange{
        type: {CREATE, UPDATE, DELETE}
    }
    class Resource <<FHIR>>
    class Launch
        note top: scope/context of application launch
    class PatientLaunch
        note bottom: For one patient only.
    class TopicLaunch
        note top: For all in topic. Requires fhircast scope.
    class Scope <<OAUTH>>

    note as N1
      Context part of Topic or separate
      for each TopicAnchor?
    end note

'    note as N2
'      Launch context ->
'      linked to primary.
'      Can also be for all in topic?
'    end note

    ImagingStudy --> Patient
    Topic --> "0..1" TopicAnchor: primary
    Topic --> "0..*" TopicAnchor
    TopicAnchor --> Patient
    TopicAnchor --> ImagingStudy

    Context *-- "0..*" FhirChange
    FhirChange *-- "1" Resource

    UserLogin -- "1" User
    UserLogin *-- SandBox
    UserLogin -- Topic
    Topic -- "1" TopicLaunch
    PatientLaunch --|> Launch
    TopicLaunch --|> Launch
    Launch *-- Context
    TopicAnchor -- "0..*" PatientLaunch
    Launch *-- "1..*" Scope
@enduml